# TekkChild-TA-670-MK2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: Build.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
Source/DSP/: Channel670.h  ControlVoltageNetwork.h  SidechainFilter.h  TapeBrain.h  TimeConstants.h  TransformerModel.h  TubeStage.h
Tests/: SmokeTest.cpp
Tools/: Measure.cpp
installer/: LICENSE.txt  TekkChild-TC-670.nsi
measurements/: README.md  frequency_response.csv  static_curve.csv  thd_vs_frequency.csv  thd_vs_level.csv
